--- a/.github/workflows/ai-triage-campaign.lock.yml
+++ b/.github/workflows/ai-triage-campaign.lock.yml
@@ -37,7 +37,15 @@ name: "AI Triage Campaign"
 "on":
   schedule:
   - cron: "0 */4 * * *"
-  workflow_dispatch: null
+  workflow_dispatch:
+    inputs:
+      max_issues:
+        default: "10"
+        description: Maximum number of issues to process
+        required: false
+      project_url:
+        description: GitHub project URL (e.g., https://github.com/users/username/projects/42)
+        required: true
 
 permissions:
   contents: read
@@ -45,7 +53,7 @@ permissions:
   repository-projects: write
 
 concurrency:
-  group: "gh-aw-${{ github.workflow }}"
+  group: "gh-aw-${{ github.workflow }}-${{ github.event.issue.number }}"
 
 run-name: "AI Triage Campaign"
 
@@ -144,8 +152,6 @@ jobs:
       contents: read
       issues: read
       repository-projects: write
-    concurrency:
-      group: "gh-aw-copilot-${{ github.workflow }}"
     env:
       GH_AW_SAFE_OUTPUTS: /tmp/gh-aw/safeoutputs/outputs.jsonl
     outputs:
@@ -1094,9 +1100,9 @@ jobs:
           
           ## Your Mission
           
-          1. **Fetch open issues** - Query for open issues in this repository (max 10 most recent)
+          1. **Fetch open issues** - Query for open issues in this repository (max ${GH_AW_EXPR_0D0C2AD6} most recent, default: 10)
           2. **Analyze each issue** - Determine if it's well-suited for AI agent resolution
-          3. **Route to project boards** - Add each issue to the appropriate project board with intelligent field assignments
+          3. **Route to project board** - Add each issue to project ${GH_AW_EXPR_7B9A5317} with intelligent field assignments
           
           ## AI Agent Suitability Assessment
           
@@ -1145,35 +1151,17 @@ jobs:
           
           ## Routing Strategy
           
-          ### Project Boards
+          ### Project Board
           
-          1. **"AI Agent Ready"** - Issues perfect for immediate AI agent work
-             - Well-defined scope
-             - Clear acceptance criteria
-             - All necessary context provided
-             - No external dependencies
+          **Use project URL "${GH_AW_EXPR_7B9A5317}" for ALL issues**
           
-          2. **"AI Agent Potential"** - Issues that could be AI-ready with clarification
-             - Generally well-scoped but missing some details
-             - May need follow-up questions answered
-             - Partially defined acceptance criteria
+          All issues will be routed to this single project board, with differentiation handled through the **Status** field:
           
-          3. **"Human Review Required"** - Issues needing human expertise
-             - Architectural decisions
-             - Vague requirements
-             - Complex debugging scenarios
-             - Multi-component coordination
-          
-          4. **"Documentation & Examples"** - Documentation-focused work
-             - README improvements
-             - API documentation
-             - Usage examples
-             - Migration guides
-          
-          5. **"Testing & Quality"** - Test-related improvements
-             - Test coverage gaps
-             - Missing integration tests
-             - Test refactoring
+          - **Status: "Ready"** - Issues perfect for immediate AI agent work (AI-Readiness ≥ 8)
+          - **Status: "Needs Clarification"** - Issues that could be AI-ready with more details (Score 5-7)
+          - **Status: "Human Review"** - Issues needing human expertise (Score < 5)
+          - **Status: "In Progress"** - Already assigned to an agent
+          - **Status: "Blocked"** - External dependencies preventing work
           
           ## Field Assignments
           
@@ -1229,13 +1217,14 @@ jobs:
           ## Special Handling
           
           **Good first issue + AI-ready:**
-          - Project: "AI Agent Ready"
+          - Project: "${GH_AW_EXPR_7B9A5317}"
           - Status: "Ready"
           - Priority: "High" (great for demonstrating AI agent capabilities)
           - Add label suggestion: `ai-agent-friendly`
           
           **Complex issue with AI-suitable sub-tasks:**
-          - Project: "Human Review Required"
+          - Project: "${GH_AW_EXPR_7B9A5317}"
+          - Status: "Human Review"
           - Add comment suggesting breaking into smaller, AI-ready tasks
           - Identify which parts could be AI-agent-ready
           
@@ -1249,7 +1238,7 @@ jobs:
           ```json
           {
             "type": "update_project",
-            "project": "AI Agent Ready",
+            "project": "${GH_AW_EXPR_7B9A5317}",
             "content_type": "issue",
             "content_number": 123,
             "fields": {
@@ -1262,10 +1251,12 @@ jobs:
           }
           ```
           
-          **Project specification:**
-          - Project name: `"AI Agent Ready"` (creates if doesn't exist)
-          - Project number: `42`
-          - Project URL: `"https://github.com/users/username/projects/42"`
+          **IMPORTANT: Use project URL "${GH_AW_EXPR_7B9A5317}" for all project board assignments.**
+          
+          **Project specification options:**
+          - Project URL: `"${GH_AW_EXPR_7B9A5317}"` (RECOMMENDED - most explicit)
+          - Project number: `"24"` (works if owner account matches repository owner)
+          - Project name: `"AI Agent Ready"` (only works if project already exists and name is unique)
           
           **Content types:**
           - `"issue"` - Add/update an issue on the board
@@ -1306,17 +1297,14 @@ jobs:
           1. **AI-Readiness Assessment** (1-2 sentences)
              - What makes this suitable/unsuitable for AI agents?
              
-          2. **Project Board Decision** (1 sentence)
-             - Which board and why?
-             
-          3. **Field Rationale** (bullet points)
+          2. **Field Rationale** (bullet points)
              - AI-Readiness Score: [score + brief reason]
              - Status: [status + brief reason]
              - Effort: [estimate + brief reason]
              - AI Agent Type: [type + brief reason]
              - Priority: [priority + brief reason]
           
-          4. **Assignment Decision**
+          3. **Assignment Decision**
              - If score ≥ 9: "Assigning to @copilot for immediate work"
              - If score 5-8: "Needs [specific clarifications] before assignment"
              - If score < 5: "Requires human review - [specific reasons]"
@@ -1331,17 +1319,17 @@ jobs:
           
           ## Workflow Steps
           
-          1. **Fetch Issues**: Use GitHub MCP to query up to 10 most recent open issues
+          1. **Fetch Issues**: Use GitHub MCP to query up to ${GH_AW_EXPR_0D0C2AD6} most recent open issues (default: 10)
           2. **Score Each Issue**: Evaluate AI-readiness based on the criteria above
-          3. **Route to Project Boards**: For each issue, output an `update_project` safe-output item to add it to the appropriate project board with field assignments
+          3. **Route to Project Board**: For each issue, output an `update_project` safe-output item with `"project": "${GH_AW_EXPR_7B9A5317}"` to add it to the project board with field assignments
           
           ## Execution Notes
           
-          - This workflow runs every 4 hours automatically
-          - Process maximum 10 open issues per run
-          - All issues are routed to appropriate project boards based on their AI-readiness score
-          - Project boards are created automatically if they don't exist
+          - This workflow runs every 4 hours automatically (or manually with custom parameters)
+          - Input defaults: max_issues=10, project_url=https://github.com/users/mnkiefer/projects/24
+          - All issues are routed to the project board with differentiation via Status field
           - Custom fields are created automatically if they don't exist
+          - User projects must exist before workflow runs (cannot auto-create)
           
           PROMPT_EOF
       - name: Append XPIA security instructions to prompt
@@ -1448,6 +1436,8 @@ jobs:
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8
         env:
           GH_AW_PROMPT: /tmp/gh-aw/aw-prompts/prompt.txt
+          GH_AW_EXPR_0D0C2AD6: ${{ github.event.inputs.max_issues }}
+          GH_AW_EXPR_7B9A5317: ${{ github.event.inputs.project_url }}
         with:
           script: |
             const fs = require("fs");
@@ -3771,8 +3761,6 @@ jobs:
     if: needs.agent.outputs.output_types != '' || needs.agent.outputs.has_patch == 'true'
     runs-on: ubuntu-latest
     permissions: {}
-    concurrency:
-      group: "gh-aw-copilot-${{ github.workflow }}"
     timeout-minutes: 10
     outputs:
       success: ${{ steps.parse_results.outputs.success }}
