--- a/.github/workflows/ai-triage-campaign.lock.yml
+++ b/.github/workflows/ai-triage-campaign.lock.yml
@@ -1232,31 +1232,19 @@ jobs:
           **Duplicate/similar patterns:**
           - If multiple similar issues exist, note they could be batch-processed by an AI agent
           
-          ## Output Format
+          ## How to Add Issues to the Project Board
           
-          For each issue you want to add to a project board, output a safe-output item with this structure:
+          For each issue you analyze, add it to the project board at:
+          **https://github.com/users/mnkiefer/projects/24**
           
-          ```json
-          {
-            "type": "update_project",
-            "project": "${GH_AW_EXPR_7B9A5317}",
-            "content_type": "issue",
-            "content_number": 123,
-            "fields": {
-              "AI-Readiness Score": "9",
-              "Status": "Ready",
-              "Effort Estimate": "Small",
-              "AI Agent Type": "Code Generation",
-              "Priority": "High"
-            }
-          }
-          ```
+          When adding an issue to the project board, specify these custom field values:
+          - **AI-Readiness Score**: Your calculated score (1-10)
+          - **Status**: "Ready", "Needs Clarification", or "Human Review"
+          - **Effort Estimate**: "Small", "Medium", "Large", or "X-Large"
+          - **AI Agent Type**: The recommended agent type
+          - **Priority**: "Critical", "High", "Medium", or "Low"
           
-          **CRITICAL: You MUST use the EXACT full project URL for the "project" field.**
-          
-          The "project" field value MUST be: ${GH_AW_EXPR_7B9A5317}
-          
-          Copy this value EXACTLY as-is, including "https://" and the full path.
+          The project board URL must be the complete URL: `https://github.com/users/mnkiefer/projects/24`
           
           **Content types:**
           - `"issue"` - Add/update an issue on the board
@@ -4159,7 +4147,7 @@ jobs:
         env:
           GH_AW_AGENT_OUTPUT: ${{ env.GH_AW_AGENT_OUTPUT }}
         with:
-          github-token: ${{ secrets.GH_AW_GITHUB_TOKEN || secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PROJECT_PAT }}
           script: |
             const fs = require("fs");
             function loadAgentOutput() {
