--- a/.github/workflows/ai-triage-campaign.lock.yml
+++ b/.github/workflows/ai-triage-campaign.lock.yml
@@ -4542,15 +4542,20 @@ jobs:
                                 }) {
                                   projectV2Field {
                                     ... on ProjectV2Field {
-                              {
-                                projectId,
-                                name: normalizedFieldName,
-                                dataType: "TEXT",
-                              }
+                                      id
+                                      name
+                                    }
+                                    ... on ProjectV2SingleSelectField {
+                                      id
+                                      name
+                                      options { id name }
+                                    }
+                                  }
+                                }
                               }`,
                               {
                                 projectId,
-                                name: fieldName,
+                                name: normalizedFieldName,
                                 dataType: "TEXT",
                               }
                             );
@@ -4573,17 +4578,18 @@ jobs:
                                     ... on ProjectV2SingleSelectField {
                                       id
                                       name
-                                      options {
-                                        id
+                                      options { id name }
+                                    }
+                                    ... on ProjectV2Field {
+                                      id
+                                      name
+                                    }
+                                  }
+                                }
+                              }`,
                               {
                                 projectId,
                                 name: normalizedFieldName,
-                                dataType: "SINGLE_SELECT",
-                                options: [{ name: String(fieldValue), description: "", color: "GRAY" }],
-                              }
-                              {
-                                projectId,
-                                name: fieldName,
                                 dataType: "SINGLE_SELECT",
                                 options: [{ name: String(fieldValue), description: "", color: "GRAY" }],
                               }
@@ -4690,7 +4696,7 @@ jobs:
                 throw error;
               }
             }
-            (async () => {
+            async function main() {
               const result = loadAgentOutput();
               if (!result.success) {
                 return;
@@ -4707,5 +4713,11 @@ jobs:
                   core.error(`Failed to process item ${i + 1}: ${error.message}`);
                 }
               }
-            })();
+            }
+            if (typeof module !== 'undefined' && module.exports) {
+              module.exports = { updateProject, parseProjectInput, generateCampaignId, main };
+            }
+            if (require.main === module) {
+              main();
+            }
 
