--- a/.github/workflows/ai-triage-campaign.lock.yml
+++ b/.github/workflows/ai-triage-campaign.lock.yml
@@ -4700,7 +4700,7 @@ jobs:
             if (typeof module !== 'undefined' && module.exports) {
               module.exports = { updateProject, parseProjectInput, generateCampaignId, main };
             }
-            if (require.main === module) {
+            if (typeof module === 'undefined' || require.main === module) {
               main();
             }
 
